Updated Esperanto translation

--- a/po/eo.po
+++ b/po/eo.po
@@ -3,14 +3,13 @@
 # This file is distributed under the same license as the gnome-color-manager package.
 # Daniel PUENTES <blatberk@openmailbox.org>, 2015.
 # Kristjan SCHMIDT <kristjan.schmidt@googlemail.com>, 2011, 2015.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2015-02-12 07:12+0000\n"
-"PO-Revision-Date: 2015-02-12 23:14+0100\n"
+"POT-Creation-Date: 2015-03-03 07:13+0000\n"
+"PO-Revision-Date: 2015-03-27 20:55+0200\n"
 "Last-Translator: Kristjan SCHMIDT <kristjan.schmidt@googlemail.com>\n"
 "Language-Team: Esperanto <gnome-l10n-eo@lists.launchpad.net>\n"
 "Language: eo\n"
@@ -189,9 +188,8 @@ msgstr "Ekrana ĝustigo"
 
 #. The basename (the last section of the filename) of the profile
 #: ../data/gcm-viewer.ui.h:19
-#, fuzzy
 msgid "White point"
-msgstr "Blankapunkto"
+msgstr "Blanka punkto"
 
 #. The licence of the profile, normally non-free
 #: ../data/gcm-viewer.ui.h:21
@@ -568,7 +566,7 @@ msgstr "La presilo finis."
 
 #: ../src/gcm-calibrate-argyll.c:2635
 msgid "The print was aborted."
-msgstr "La presado estis nuligita."
+msgstr "La preso estis nuligita."
 
 #: ../src/gcm-calibrate.c:404
 msgid "Please attach instrument"
@@ -655,7 +653,7 @@ msgstr "_Malfermi"
 #. TRANSLATORS: filter name on the file->open dialog
 #: ../src/gcm-calibrate.c:690
 msgid "Supported images files"
-msgstr "Subtenitaj bild-dosierformoj"
+msgstr "Subtenataj bild-dosierformoj"
 
 #. TRANSLATORS: filter name on the file->open dialog
 #: ../src/gcm-calibrate.c:697 ../src/gcm-calibrate.c:751
@@ -686,7 +684,7 @@ msgstr "Kalibro ne estas kompleta"
 
 #: ../src/gcm-calibrate-main.c:150
 msgid "Are you sure you want to cancel the calibration?"
-msgstr "Ĉu vi verte volas nuligi la kalibron?"
+msgstr "Ĉu vi certe volas nuligi la kalibron?"
 
 #: ../src/gcm-calibrate-main.c:153
 msgid "Continue calibration"
@@ -761,22 +759,22 @@ msgstr "Ĉio farite!"
 #. TRANSLATORS: this is the final summary
 #: ../src/gcm-calibrate-main.c:895
 msgid "The camera has been calibrated successfully."
-msgstr "Sukcese kalibris la fotilon."
+msgstr "La fotilo estas sukcese kalibrita."
 
 #. TRANSLATORS: this is the final summary
 #: ../src/gcm-calibrate-main.c:899
 msgid "The display has been calibrated successfully."
-msgstr "Sukcese kalibris la ekranon."
+msgstr "La ekrano estas sukcese kalibrita."
 
 #. TRANSLATORS: this is the final summary
 #: ../src/gcm-calibrate-main.c:903
 msgid "The printer has been calibrated successfully."
-msgstr "Sukcese kalibris la presilon."
+msgstr "La presilo estas sukcese kalibrita."
 
 #. TRANSLATORS: this is the final summary
 #: ../src/gcm-calibrate-main.c:907
 msgid "The device has been calibrated successfully."
-msgstr "Sukcese kalibris la aparaton."
+msgstr "La aparato estas sukcese kalibrita."
 
 #. TRANSLATORS: this is the final summary
 #: ../src/gcm-calibrate-main.c:914
@@ -936,7 +934,7 @@ msgstr "Instali celojn"
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1224
 msgid "CMP Digital Target 3"
-msgstr ""
+msgstr "CMP Digital Target 3"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1228
@@ -945,7 +943,6 @@ msgstr "CMP DT 003"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1232
-#| msgid "Color Picker"
 msgid "ColorChecker"
 msgstr "KolorKonrolilo"
 
@@ -966,7 +963,7 @@ msgstr "KolorKontolilo SG"
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1244
 msgid "Hutchcolor"
-msgstr ""
+msgstr "Hutchcolor"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-main.c:1248
@@ -1019,8 +1016,9 @@ msgstr ""
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate-main.c:1356
+#, fuzzy
 msgid "Please select the calibration target type."
-msgstr ""
+msgstr "Bonvolu elekti la kalibran celan tipon."
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1359
@@ -1039,8 +1037,9 @@ msgstr "Elektu vian ekranan tipon"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1437
+#, fuzzy
 msgid "Select the monitor type that is attached to your computer."
-msgstr ""
+msgstr "Elektu la ekrantipon, kiu estas kunligita al via komputilo."
 
 #: ../src/gcm-calibrate-main.c:1439
 #, fuzzy
@@ -1115,7 +1114,7 @@ msgstr "CIE D75"
 
 #: ../src/gcm-calibrate-main.c:1598
 msgid "Native (Already set manually)"
-msgstr ""
+msgstr "Indiĝena (jam agordita permane)"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1610
@@ -1126,7 +1125,7 @@ msgstr "Elekti ekranan blankapunkton"
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1648
 msgid "Choose profiling mode"
-msgstr ""
+msgstr "Elekti profilan reĝimon"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1655
@@ -1147,8 +1146,9 @@ msgstr "Elekti kalibran kvaliton"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1741
+#, fuzzy
 msgid "Higher quality calibration requires many color samples and more time."
-msgstr ""
+msgstr "Altkvalita kalibron bezonas multajn kolor-specimenojn kaj tempon."
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate-main.c:1745
@@ -1165,7 +1165,7 @@ msgstr ""
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate-main.c:1753
 msgid "The high precision profile also requires more paper and printer ink."
-msgstr ""
+msgstr "La altpreciza profilo bezonas ankaŭ pli da papero kaj inko."
 
 #. TRANSLATORS: radio options for calibration precision
 #: ../src/gcm-calibrate-main.c:1758
@@ -1185,15 +1185,15 @@ msgstr "Rapide"
 #, c-format
 msgid "(about %i sheet of paper)"
 msgid_plural "(about %i sheets of paper)"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "(proks. %i paperfolio)"
+msgstr[1] "(proks. %i paperfolioj)"
 
 #: ../src/gcm-calibrate-main.c:1778
 #, c-format
 msgid "(about %i minute)"
 msgid_plural "(about %i minutes)"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "(proks. %i minuto)"
+msgstr[1] "(proks. %i minutoj)"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1819
@@ -1207,8 +1207,9 @@ msgstr "Profil-titolo"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1862
+#, fuzzy
 msgid "Choose a title to identify the profile on your system."
-msgstr ""
+msgstr "Elektu titolon por identigi la profilon ene de via sistemo."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1883
@@ -1218,22 +1219,26 @@ msgstr "Profil-titolo"
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1905
 msgid "Insert sensor hardware"
-msgstr ""
+msgstr "Enmeti sentilan aparataron"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1912
+#, fuzzy
 msgid "You need to insert sensor hardware to continue."
-msgstr ""
+msgstr "Por daŭrigi, vi devas enmeti sentilan aparataron."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1918
+#, fuzzy
 msgid "Sensor Check"
-msgstr ""
+msgstr "Sentila kontrolo"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1947
+#, fuzzy
 msgid "The device could not be found. Ensure it is plugged in and turned on."
 msgstr ""
+"Ne eblis trovi la aparaton. Kontrolu, ke ĝi estas konektita kaj ŝaltita."
 
 #. TRANSLATORS: this is saved in the profile
 #: ../src/gcm-calibrate-main.c:2208
@@ -1267,13 +1272,15 @@ msgstr "Kopirajto (c)"
 #. TRANSLATORS: we can make this modal (stay on top of) another window
 #: ../src/gcm-calibrate-main.c:2345 ../src/gcm-picker.c:781
 #: ../src/gcm-viewer.c:1803
+#, fuzzy
 msgid "Set the parent window to make this modal"
-msgstr ""
+msgstr "Agordi la patran fenestron por igi tiun ĉi modalan"
 
 #. TRANSLATORS: show just the one profile, rather than all
 #: ../src/gcm-calibrate-main.c:2348
+#, fuzzy
 msgid "Set the specific device to calibrate"
-msgstr ""
+msgstr "Agordi la kalibrotan aparaton"
 
 #: ../src/gcm-calibrate-main.c:2389
 msgid "No device was specified!"
@@ -1310,7 +1317,7 @@ msgstr "Testi profilon: "
 #. TRANSLATORS: turn on all debugging
 #: ../src/gcm-debug.c:105
 msgid "Show debugging information for all files"
-msgstr ""
+msgstr "Montri sencimigan informon pri ĉiuj dosieroj"
 
 #: ../src/gcm-debug.c:162
 msgid "Debugging Options"
@@ -1322,21 +1329,22 @@ msgstr "Montri sencimigajn opciojn"
 
 #. TRANSLATORS: command line option: a list of catalogs to install
 #: ../src/gcm-import.c:101
+#, fuzzy
 msgid "ICC profile to install"
-msgstr ""
+msgstr "Instalota IKK profilon"
 
 #: ../src/gcm-import.c:127
 msgid "No filename specified"
-msgstr ""
+msgstr "Neniu dosiernomo estas specifita"
 
 #: ../src/gcm-import.c:147 ../src/gcm-viewer.c:1447
 msgid "Failed to open ICC profile"
-msgstr ""
+msgstr "Malsukcesis malfermi IKK-profilon"
 
 #: ../src/gcm-import.c:152
 #, c-format
 msgid "Failed to parse file: %s"
-msgstr ""
+msgstr "Malsukcesis analizi dosieron: %s"
 
 #. TRANSLATORS: message text
 #: ../src/gcm-import.c:174
@@ -1370,7 +1378,7 @@ msgstr "Ĉu enporti aparatan kolorprofilon?"
 #. TRANSLATORS: the profile type
 #: ../src/gcm-import.c:248
 msgid "Import named color profile?"
-msgstr ""
+msgstr "Ĉu enporti nomitan kolorprofilon?"
 
 #. TRANSLATORS: the profile type
 #: ../src/gcm-import.c:252
@@ -1399,62 +1407,66 @@ msgstr "Kopirajto:"
 #. TRANSLATORS: the root window of all the screens
 #: ../src/gcm-inspect.c:195
 msgid "Root window profile:"
-msgstr ""
+msgstr "Radikfenestra profilo:"
 
 #. TRANSLATORS: the root window of all the screens
 #: ../src/gcm-inspect.c:207
+#, fuzzy
 msgid "Root window protocol version:"
-msgstr ""
+msgstr "Radikfenestra protokolversio:"
 
 #. TRANSLATORS: no DBus session bus
 #: ../src/gcm-inspect.c:232 ../src/gcm-inspect.c:301 ../src/gcm-utils.c:118
 msgid "Failed to connect to session bus:"
-msgstr ""
+msgstr "Malsukcesis konekti al seanca buso:"
 
 #. TRANSLATORS: the DBus method failed
 #: ../src/gcm-inspect.c:250 ../src/gcm-inspect.c:319 ../src/gcm-utils.c:142
 msgid "The request failed:"
-msgstr ""
+msgstr "La peto malsukcesis:"
 
 #. TRANSLATORS: no profile has been asigned to this device
 #: ../src/gcm-inspect.c:259
+#, fuzzy
 msgid "There are no ICC profiles assigned to this file"
-msgstr ""
+msgstr "Estas neniu IKK-profilo atribuita al tiu ĉi dosiero"
 
 #. TRANSLATORS: this is a list of profiles suitable for the device
 #: ../src/gcm-inspect.c:264 ../src/gcm-inspect.c:336
 msgid "Suitable profiles for:"
-msgstr ""
+msgstr "Taŭgaj profiloj por:"
 
 #. TRANSLATORS: no profile has been asigned to this window
 #: ../src/gcm-inspect.c:331
 msgid "There are no ICC profiles for this window"
-msgstr ""
+msgstr "Estas neniu IKK-profilo por tiu ĉi fenestro"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:367
 msgid "Show xserver properties"
-msgstr ""
+msgstr "Montri atributojn de xserver"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:370
 msgid "Get the profiles for a specific file"
-msgstr ""
+msgstr "Akiri profilojn por specifa dosiero"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:373
 msgid "Get the profile for a specific window"
-msgstr ""
+msgstr "Akiri la profilon por specifa fenestro"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:376
+#, fuzzy
 msgid "Dump all details about this system"
-msgstr ""
+msgstr "Ŝuti ĉiujn detalojn rilatantaj al tiu ĉi sistemo"
 
 #. TRANSLATORS: just dumps the EDID to disk
 #: ../src/gcm-inspect.c:389
+#, fuzzy
 msgid "EDID inspect program"
-msgstr ""
+msgstr "EDID-a inspekta programo"
 
 #. TRANSLATORS: this is when the error is invalid
 #. TRANSLATORS: this is when the ambient light level is unknown
@@ -1470,25 +1482,27 @@ msgid "No colorimeter is attached."
 msgstr "Neniu kolormezurilo estis kunligita."
 
 #: ../src/gcm-picker.c:386
+#, fuzzy
 msgid "The sensor has no native driver."
-msgstr ""
+msgstr "La sentilo ne havas indiĝenan pelilon."
 
 #. TRANSLATORS: this is displayed the user has not got suitable hardware
 #: ../src/gcm-picker.c:395
+#, fuzzy
 msgid "The attached colorimeter is not capable of reading a spot color."
-msgstr ""
+msgstr "La kunligita kolormezurilo ne povas legi kolorpunkton."
 
 #. TRANSLATORS: this is when there are no profiles that can be used;
 #. * the search term is either "RGB" or "CMYK"
 #: ../src/gcm-picker.c:646
-#, c-format
+#, fuzzy, c-format
 msgid "No %s color spaces available"
-msgstr ""
+msgstr "Neniu %s kolorspacoj disponeblaj"
 
 #. TRANSLATORS: tool that is used to pick colors
 #: ../src/gcm-picker.c:796
 msgid "GNOME Color Manager Color Picker"
-msgstr ""
+msgstr "Kolorelektilo de GNOME kolor-administrilo"
 
 #. TRANSLATORS: this is the colorspace, e.g. cyan, magenta, yellow, black
 #. TRANSLATORS: this the ICC colorspace type
@@ -1504,13 +1518,13 @@ msgstr "griza"
 #. TRANSLATORS: title, usually we can tell based on the EDID data or output name
 #: ../src/gcm-viewer.c:386
 msgid "Permanently delete profile?"
-msgstr ""
+msgstr "Ĉu forigi profilon daŭre?"
 
 #. TRANSLATORS: dialog message
 #: ../src/gcm-viewer.c:389
 msgid ""
 "Are you sure you want to remove this profile from your system permanently?"
-msgstr ""
+msgstr "Ĉu vi vere volas forigi tiun ĉi profilon daŭre?"
 
 #. TRANSLATORS: button, delete a profile
 #: ../src/gcm-viewer.c:392
@@ -1524,7 +1538,7 @@ msgstr "_Enporti"
 #. TRANSLATORS: filter name on the file->open dialog
 #: ../src/gcm-viewer.c:461
 msgid "Supported ICC profiles"
-msgstr ""
+msgstr "Subtenataj IKK-profiloj"
 
 #. TRANSLATORS: could not read file
 #: ../src/gcm-viewer.c:497
@@ -1553,38 +1567,40 @@ msgstr ""
 
 #. TRANSLATORS: this the ICC profile type
 #: ../src/gcm-viewer.c:667
+#, fuzzy
 msgid "Colorspace conversion"
-msgstr ""
+msgstr "Kolorspaca konverto"
 
 #. TRANSLATORS: this the ICC profile kind
 #: ../src/gcm-viewer.c:671
+#, fuzzy
 msgid "Abstract"
-msgstr ""
+msgstr "Abstrakto"
 
 #. TRANSLATORS: this the ICC profile type
 #: ../src/gcm-viewer.c:675
 msgid "Named color"
-msgstr ""
+msgstr "Nomita koloro"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-viewer.c:693
 msgid "LAB"
-msgstr ""
+msgstr "LAB"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-viewer.c:697
 msgid "LUV"
-msgstr ""
+msgstr "LUV"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-viewer.c:701
 msgid "YCbCr"
-msgstr ""
+msgstr "YCbCr"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-viewer.c:705
 msgid "Yxy"
-msgstr ""
+msgstr "Yxy"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-viewer.c:713
@@ -1593,18 +1609,20 @@ msgstr "Grizo"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-viewer.c:717
+#, fuzzy
 msgid "HSV"
-msgstr ""
+msgstr "HSV"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-viewer.c:725
+#, fuzzy
 msgid "CMY"
-msgstr ""
+msgstr "CMFN"
 
 #. TRANSLATORS: e.g. sRGB or adbode RGB
 #: ../src/gcm-viewer.c:764
 msgid "Standard space"
-msgstr ""
+msgstr "Defaŭlta spaco"
 
 #. TRANSLATORS: the raw EDID MD5 of the display device
 #: ../src/gcm-viewer.c:766
@@ -1621,8 +1639,9 @@ msgstr "Ekrana seria numero"
 
 #. TRANSLATORS: the PNPID is a three letter code, e.g. DEL
 #: ../src/gcm-viewer.c:770
+#, fuzzy
 msgid "Display PNPID"
-msgstr ""
+msgstr "Ekrana PNPID"
 
 #. TRANSLATORS: who made the display
 #: ../src/gcm-viewer.c:772
@@ -1652,17 +1671,17 @@ msgstr "Frama versio"
 #. TRANSLATORS: Where the profile data came from, e.g. 'test' or 'standard'
 #: ../src/gcm-viewer.c:782
 msgid "Data source type"
-msgstr ""
+msgstr "Datumfonta tipo"
 
 #. TRANSLATORS: how the qualifier is formatted, e.g. 'ColorSpace.Paper.DPI'
 #: ../src/gcm-viewer.c:784
 msgid "Mapping format"
-msgstr ""
+msgstr "Mapado-aranĝo"
 
 #. TRANSLATORS: The qualifiers for the profile, e.g. 'RGB.Glossy.300dpi'
 #: ../src/gcm-viewer.c:786
 msgid "Mapping qualifier"
-msgstr ""
+msgstr "Mapado-kvalifikilo"
 
 #. TRANSLATORS: The original device the profile was made for
 #: ../src/gcm-viewer.c:788
@@ -1674,17 +1693,17 @@ msgstr "Enigaparato"
 #. TRANSLATORS: The average error when making the profile
 #: ../src/gcm-viewer.c:790
 msgid "Delta-E average"
-msgstr ""
+msgstr "Delta-E meza"
 
 #. TRANSLATORS: the maximum error when making the profile
 #: ../src/gcm-viewer.c:792
 msgid "Delta-E maximum"
-msgstr ""
+msgstr "Delta-E maksimuma"
 
 #. TRANSLATORS: the RMS error when making the profile
 #: ../src/gcm-viewer.c:794
 msgid "Delta-E RMS"
-msgstr ""
+msgstr "Delta-E RMS"
 
 #. TRANSLATORS: The device name, e.g. 'huey'
 #: ../src/gcm-viewer.c:796
@@ -1693,8 +1712,9 @@ msgstr "Kalibra aparato"
 
 #. TRANSLATORS: screen type e.g. 'glossy' or 'matte'
 #: ../src/gcm-viewer.c:798
+#, fuzzy
 msgid "Screen surface finish"
-msgstr ""
+msgstr "Ekranosurfaca tipo"
 
 #. TRANSLATORS: e.g. DVI or VGA
 #: ../src/gcm-viewer.c:800
@@ -1708,8 +1728,9 @@ msgstr "Ekrana brileco"
 
 #. TRANSLATORS: e.g. the 3D volume of the gamut graph
 #: ../src/gcm-viewer.c:804
+#, fuzzy
 msgid "Gamut volume"
-msgstr ""
+msgstr "Gama nivelo"
 
 #. TRANSLATORS: e.g. what proportion of sRGB is covered
 #: ../src/gcm-viewer.c:806
@@ -1733,8 +1754,9 @@ msgstr "Oni ne agordis kopirajton"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:927
+#, fuzzy
 msgid "The display compensation table is invalid"
-msgstr ""
+msgstr "La tablo de ekrana kompenso estas nevalida"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:931
@@ -1743,43 +1765,49 @@ msgstr ""
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:935
+#, fuzzy
 msgid "The gray axis contains significant amounts of color"
-msgstr ""
+msgstr "La griza akso enhavas konsiderindaj kiomo da koloro"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:939
+#, fuzzy
 msgid "The gray axis is non-monotonic"
-msgstr ""
+msgstr "La griza akso estas ne-monotona"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:943
+#, fuzzy
 msgid "One or more of the primaries are invalid"
-msgstr ""
+msgstr "Unu aŭ pli primaroj estas nevalida"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:947
+#, fuzzy
 msgid "The primaries do not add to white"
-msgstr ""
+msgstr "La primaroj ne aldoniĝas al blanko"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:951
+#, fuzzy
 msgid "One or more of the primaries is unlikely"
-msgstr ""
+msgstr "Unu aŭ pli primaroj estas neverŝajna"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:955
 msgid "The white is not D50 white"
-msgstr "La blanko ne estas D50-blanko"
+msgstr "La blanko ne estas D50 blanko"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:959
+#, fuzzy
 msgid "The whitepoint temperature is unlikely"
-msgstr ""
+msgstr "La blankapunkta temperaturo estas neverŝajna"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:963
 msgid "Unknown warning type"
-msgstr ""
+msgstr "Nekonata avertotipo"
 
 #. TRANSLATORS: if the device has a VCGT profile
 #: ../src/gcm-viewer.c:1105
@@ -1795,7 +1823,7 @@ msgstr "Ne"
 #. * but may not be any good
 #: ../src/gcm-viewer.c:1134
 msgid "The profile has the following problems:"
-msgstr ""
+msgstr "La profilo enhavas la jenajn problemojn:"
 
 #. TRANSLATORS: this is the icc creation date strftime format
 #: ../src/gcm-viewer.c:1226
@@ -1815,12 +1843,12 @@ msgstr "Ne eblas forigi tiun ĉi profilon"
 #. TRANSLATORS: show just the one profile, rather than all
 #: ../src/gcm-viewer.c:1806
 msgid "Set the specific profile to show"
-msgstr ""
+msgstr "Agordi la specifan montrotan profilon"
 
 #. TRANSLATORS: show just the one filename, rather than all
 #: ../src/gcm-viewer.c:1809
 msgid "Set the specific file to show"
-msgstr ""
+msgstr "Agordi la specifan montrotan dosieron"
 
 #~ msgid "License"
 #~ msgstr "Permesilo"
