Fixes to Catalan translation

--- a/help/ca/ca.po
+++ b/help/ca/ca.po
@@ -90,7 +90,7 @@ msgid ""
 "calibration curves is different for each version of Microsoft Windows."
 msgstr ""
 "El mètode per assignar un perfil a un dispositiu i també utilitzar les "
-"corbes de calibració incrustades és diferent per a cada versió de Microsoft "
+"corbes de calibratge incrustades és diferent per a cada versió de Microsoft "
 "Windows."
 
 #. (itstool) path: section/title
@@ -143,12 +143,12 @@ msgid ""
 "from default profile to be easily set at each startup."
 msgstr ""
 "Windows XP requereix que un programa s'inicii durant l'arrencada per copiar "
-"les corbes de calibració a la targeta de vídeo. Això és pot fer utilitzant "
-"el <app>Adobe Gamma</app>, el <app>LUT Loader</app> o de franc, utilitzant "
+"les corbes de calibratge a la targeta de vídeo. Això es pot fer utilitzant "
+"l'<app>Adobe Gamma</app>, el <app>LUT Loader</app> o de franc, utilitzant "
 "el <app href=\"https://www.microsoft.com/download/en/details.aspx?"
 "displaylang=en&amp;id=12714\"> Microsoft Color Control Panel Applet</app>. "
 "Aquest últim afegeix un element nou <gui>Color</gui> al tauler de control i "
-"permet establir fàcilment durant l'arrencada les corbes de calibració des "
+"permet establir fàcilment durant l'arrencada les corbes de calibratge des "
 "del perfil per defecte."
 
 #. (itstool) path: section/title
@@ -165,12 +165,12 @@ msgid ""
 "are using profiles with embedded calibration curves you have to be very "
 "careful the calibration state has not been cleared."
 msgstr ""
-"Microsoft Windows Vista erròniament esborra les corbes de calibració de "
-"vídeo LUT desprès d'iniciar la sessió, d'aturar temporalment l'ordinador i "
+"Microsoft Windows Vista erròniament esborra les corbes de calibratge de "
+"vídeo LUT després d'iniciar la sessió, d'aturar temporalment l'ordinador i "
 "quan apareix la pantalla de l'UAC. Això significa que haurà de recarregar "
-"manualment les corbes de calibració del perfil ICC. Si esteu utilitzant "
-"perfils amb corbes de calibració incrustades heu d'anar amb compte de no "
-"esborrar l'estat de la calibració. "
+"manualment les corbes de calibratge del perfil ICC. Si esteu utilitzant "
+"perfils amb corbes de calibratge incrustades heu d'anar amb compte de no "
+"esborrar l'estat de la calibratge."
 
 #. (itstool) path: section/title
 #: C/color-import-windows.page:68
@@ -207,8 +207,8 @@ msgstr ""
 "Obriu <guiseq><gui>Tauler de control</gui><gui>Administració del color</"
 "gui></guiseq> i afegiu el perfil al sistema fent clic al botó <gui>Afegeix</"
 "gui>. Feu clic a la pestanya <gui>Opcions avançades</gui> i cerqueu "
-"<gui>Calibració de la pantalla</gui>. La casella de selecció <gui>Utilitza "
-"la calibració de pantalla de Windows</gui> habilita la corba de calibració, "
+"<gui>calibratge de la pantalla</gui>. La casella de selecció <gui>Utilitza "
+"la calibratge de pantalla de Windows</gui> habilita la corba de calibratge, "
 "però la casella no es pot modificar. Això es pot canviar si feu clic a "
 "<gui>Canvia els valors predeterminats del sistema</gui> i torneu a la "
 "pestanya <gui>Opcions avançades</gui> i feu clic a la casella de selecció."
@@ -220,8 +220,8 @@ msgid ""
 "gamma ramps. The profile calibration curves should now be set for every boot."
 msgstr ""
 "Per establir les rampes de gamma tanqueu el diàleg i feu clic a <gui>Torna a "
-"carregar les calibracions actuals</gui>. A partir d'ara, cada cop que "
-"arrenqueu, es carregara el perfil de les corbes de calibració."
+"carregar els calibratges actuals</gui>. A partir d'ara, cada cop que "
+"arrenqueu, es carregara el perfil de les corbes de calibratge."
 
 #. (itstool) path: info/desc
 #: C/color-import-osx.page:9
@@ -231,7 +231,7 @@ msgstr "Com importar un perfil ICC en un sistema OS X."
 #. (itstool) path: page/title
 #: C/color-import-osx.page:17
 msgid "Installing an ICC profile on Apple OS X"
-msgstr "Instal·lació d'un perfil ICC al OS X d'Apple"
+msgstr "Instal·lació d'un perfil ICC a l'OS X d'Apple"
 
 #. (itstool) path: page/p
 #: C/color-import-osx.page:18
@@ -241,10 +241,10 @@ msgid ""
 "stored in <file>/Library/ColorSync/Profiles</file> and user-specific "
 "profiles are stored in <file>~/Library/ColorSync/Profiles</file>."
 msgstr ""
-"De forma similar al Linux, al OS X d'Apple els perfils es poden instal·lar "
+"De forma similar al Linux, a l'OS X d'Apple els perfils es poden instal·lar "
 "per a tot el sistema o per a un usuari en particular. Els perfils per a tot "
-"el sistema es desen a <file>/Library/ColorSync/Profiles</file> i els que que "
-"son per a un usuari en particular es desen a <file>~/Library/ColorSync/"
+"el sistema es desen a <file>/Library/ColorSync/Profiles</file> i els que "
+"són per a un usuari en particular es desen a <file>~/Library/ColorSync/"
 "Profiles</file>."
 
 #. (itstool) path: page/p
