Fixes to Catalan translation

--- a/help/ca/ca.po
+++ b/help/ca/ca.po
@@ -35,7 +35,7 @@ msgstr "Manel Vidal <verduler@gmail.com>, 2014"
 #. (itstool) path: info/desc
 #: C/color-import-linux.page:9
 msgid "How to import an existing ICC profile using a Linux system."
-msgstr "Com importar un peril ICC en un sistema Linux."
+msgstr "Com importar un perfil ICC en un sistema Linux."
 
 #. (itstool) path: credit/name
 #: C/color-import-linux.page:11 C/color-import-windows.page:11
@@ -69,7 +69,7 @@ msgid ""
 "loaded for all users at startup if the <gui>Set for all users</gui> button "
 "is clicked."
 msgstr ""
-"Les corbes de cal·libració del perfil es carregen en iniciar la sessió. Les "
+"Les corbes de calibratge del perfil es carregen en iniciar la sessió. Les "
 "corbes també poden ser carregades per a tots els usuaris si feu clic al botó "
 "<gui>Estableix per a tots els usuaris</gui>."
 
@@ -170,7 +170,7 @@ msgstr ""
 "quan apareix la pantalla de l'UAC. Això significa que haurà de recarregar "
 "manualment les corbes de calibratge del perfil ICC. Si esteu utilitzant "
 "perfils amb corbes de calibratge incrustades heu d'anar amb compte de no "
-"esborrar l'estat de la calibratge."
+"esborrar l'estat del calibratge."
 
 #. (itstool) path: section/title
 #: C/color-import-windows.page:68
@@ -208,7 +208,7 @@ msgstr ""
 "gui></guiseq> i afegiu el perfil al sistema fent clic al botó <gui>Afegeix</"
 "gui>. Feu clic a la pestanya <gui>Opcions avançades</gui> i cerqueu "
 "<gui>calibratge de la pantalla</gui>. La casella de selecció <gui>Utilitza "
-"la calibratge de pantalla de Windows</gui> habilita la corba de calibratge, "
+"el calibratge de pantalla de Windows</gui> habilita la corba de calibratge, "
 "però la casella no es pot modificar. Això es pot canviar si feu clic a "
 "<gui>Canvia els valors predeterminats del sistema</gui> i torneu a la "
 "pestanya <gui>Opcions avançades</gui> i feu clic a la casella de selecció."
