--- a/po/pl.po
+++ b/po/pl.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-03-02 18:34+0100\n"
-"PO-Revision-Date: 2015-03-02 18:35+0100\n"
+"POT-Creation-Date: 2015-08-24 16:48+0200\n"
+"PO-Revision-Date: 2015-08-24 16:49+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <gnomepl@aviary.pl>\n"
 "Language: pl\n"
@@ -130,7 +130,7 @@ msgid ""
 "This functionality is typically used by GNOME Control Center from the color "
 "panel although can be used on its own."
 msgstr ""
-"Ta funkcjonalność jest zwykle używana przez Centrum kontroli środowiska "
+"Ta funkcjonalność jest zwykle używana przez Centrum sterowania środowiska "
 "GNOME w panelu kolorów, ale może być też używana samodzielnie."
 
 #: ../data/gcm-viewer.desktop.in.h:1 ../data/gcm-viewer.ui.h:1
@@ -1722,7 +1722,7 @@ msgstr "Tablica wyrównania ekranu jest nieprawidłowa"
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:931
 msgid "A scum dot is present for media white"
-msgstr "\"Scum dot\" jest obecna na nośniku bieli"
+msgstr "„Scum dot” jest obecna na nośniku bieli"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:935
