Add trailing semicolon to Lithuanian Keywords in gcm-viewer.desktop

--- a/po/lt.po
+++ b/po/lt.po
@@ -137,7 +137,7 @@ msgstr "Spalvų profilio žiūryklė"
 
 #: ../data/gcm-viewer.desktop.in.h:3
 msgid "Color;ICC;"
-msgstr "Spalva;ICC"
+msgstr "Spalva;ICC;"
 
 #: ../data/gcm-viewer.ui.h:2
 msgid "Add a profile for the device"
