--- a/po/de.po
+++ b/po/de.po
@@ -15,7 +15,7 @@ msgstr ""
 "PO-Revision-Date: 2014-12-27 00:24+0100\n"
 "Last-Translator: Bernd Homuth <dev@hmt.im>\n"
 "Language-Team: Deutsch <gnome-de@gnome.org>\n"
-"Language: de_DE\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
