--- a/po/et.po
+++ b/po/et.po
@@ -17,7 +17,7 @@ msgstr ""
 "PO-Revision-Date: 2015-03-15 09:46+0300\n"
 "Last-Translator: Mattias Põldaru <mahfiaz@gmail.com>\n"
 "Language-Team: Gnome Estonian Translation Team <gnome-et@linux.ee>\n"
-"Language: et_EE\n"
+"Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
