--- a/po/he.po
+++ b/po/he.po
@@ -12,7 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2015-01-26 21:19+0200\n"
 "Last-Translator: Yosef Or Boczko <yoseforb@gmail.com>\n"
 "Language-Team: עברית <>\n"
-"Language: he_IL\n"
+"Language: he\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
