--- a/po/nl.po
+++ b/po/nl.po
@@ -16,7 +16,7 @@ msgstr ""
 "PO-Revision-Date: 2014-03-17 16:21+0100\n"
 "Last-Translator: Erwin Poeze <donnut@outlook.com>\n"
 "Language-Team: Nederlands <vertaling@vrijschrift.org>\n"
-"Language: \n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
