--- a/po/th.po
+++ b/po/th.po
@@ -12,6 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2009-11-27 11:30+0700\n"
 "Last-Translator: Phondanai Khanti <phondanai@gmail.com>\n"
 "Language-Team: Thai <thai-l10n@googlegroups.com>\n"
+"Language: th\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
