--- a/po/es.po
+++ b/po/es.po
@@ -1,15 +1,15 @@
 #
 # Jorge González <jorgegonz@svn.gnome.org>, 2009, 2010, 2011.
 # Nicolás Satragno <nicoymatu9@hotmail.com>, 2011.
-# Daniel Mustieles <daniel.mustieles@gmail.com>, 2011, 2012, 2013, 2014.
+# Daniel Mustieles <daniel.mustieles@gmail.com>, 2011, 2012, 2013, 2014, 2016.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
-"color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2016-07-19 12:07+0000\n"
-"PO-Revision-Date: 2014-12-22 12:17+0100\n"
+"color-manager&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2016-08-15 10:01+0000\n"
+"PO-Revision-Date: 2016-08-16 12:13+0200\n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Español; Castellano <gnome-es-list@gnome.org>\n"
 "Language: es\n"
@@ -1176,17 +1176,21 @@ msgstr "Rápida"
 
 #: ../src/gcm-calibrate-main.c:1633
 #, c-format
-msgid "(about %i sheet of paper)"
-msgid_plural "(about %i sheets of paper)"
-msgstr[0] "(Aprox. %i hoja de papel)"
-msgstr[1] "(Aprox. %i hojas de papel)"
+#| msgid "(about %i sheet of paper)"
+#| msgid_plural "(about %i sheets of paper)"
+msgid "(about %u sheet of paper)"
+msgid_plural "(about %u sheets of paper)"
+msgstr[0] "(Aprox. %u hoja de papel)"
+msgstr[1] "(Aprox. %u hojas de papel)"
 
 #: ../src/gcm-calibrate-main.c:1644
 #, c-format
-msgid "(about %i minute)"
-msgid_plural "(about %i minutes)"
-msgstr[0] "(Aprox. %i minuto)"
-msgstr[1] "(Aprox. %i minutos)"
+#| msgid "(about %i minute)"
+#| msgid_plural "(about %i minutes)"
+msgid "(about %u minute)"
+msgid_plural "(about %u minutes)"
+msgstr[0] "(Aprox. %u minuto)"
+msgstr[1] "(Aprox. %u minutos)"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1685
