Updated Polish translation

--- a/po/pl.po
+++ b/po/pl.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-08-15 12:12+0200\n"
-"PO-Revision-Date: 2016-08-15 12:13+0200\n"
+"POT-Creation-Date: 2016-09-08 23:49+0200\n"
+"PO-Revision-Date: 2016-09-08 23:50+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
@@ -40,7 +40,7 @@ msgid ""
 msgstr ""
 "Przeglądarka profilów kolorów dla środowiska GNOME wyświetla profile kolorów "
 "zainstalowane na komputerze i umożliwia kalibrowanie ekranów, drukarek "
-"i aparatów używając kreatora."
+"i aparatów za pomocą kreatora."
 
 #: ../data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in.h:4
 msgid ""
@@ -258,8 +258,7 @@ msgstr "Następny obraz"
 
 #: ../data/gcm-viewer.ui.h:43
 msgid "This shows what an image would look like if saved with the profile"
-msgstr ""
-"Tak ten obraz wyglądałby, jeśli zostały zapisany z użyciem tego profilu"
+msgstr "Tak ten obraz wyglądałby, gdyby został zapisany za pomocą tego profilu"
 
 #: ../data/gcm-viewer.ui.h:44
 msgid "From sRGB"
@@ -267,7 +266,7 @@ msgstr "Z sRGB"
 
 #: ../data/gcm-viewer.ui.h:45
 msgid "This shows what an image would look like if opened with the profile"
-msgstr "Tak ten obraz wyglądałby, jeśli zostały otwarty z użyciem tego profilu"
+msgstr "Tak ten obraz wyglądałby, gdyby został otwarty za pomocą tego profilu"
 
 #: ../data/gcm-viewer.ui.h:46
 msgid "To sRGB"
@@ -319,7 +318,7 @@ msgstr "Odczytywanie łat"
 
 #: ../src/gcm-calibrate-argyll.c:450
 msgid "Reading the patches using the color measuring instrument."
-msgstr "Odczytywanie łat używając urządzenia do mierzenia kolorów."
+msgstr "Odczytywanie łat za pomocą urządzenia do mierzenia kolorów."
 
 #: ../src/gcm-calibrate-argyll.c:538
 msgid "Drawing the patches"
@@ -490,7 +489,7 @@ msgid ""
 "Place the colorimeter on the area of white next to the letter and click and "
 "hold the measure switch."
 msgstr ""
-"Proszę umieścić kolorymetr na białym obszarze na przeciwko litery oraz "
+"Proszę umieścić kolorymetr na białym obszarze naprzeciwko litery oraz "
 "kliknąć i przytrzymać przełącznik mierzenia."
 
 #. TRANSLATORS: dialog message, just follow the hardware instructions
@@ -813,7 +812,7 @@ msgstr "Przywrócenie ekranu do wartości fabrycznych."
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate-main.c:935
 msgid "Disable dynamic contrast if your display has this feature."
-msgstr "Wyłączenie dynamicznego kontrastu, jeśli ekran posiada tę funkcję."
+msgstr "Wyłączenie dynamicznego kontrastu, jeśli ekran ma tę funkcję."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate-main.c:938
@@ -1109,7 +1108,7 @@ msgid ""
 "patches, or profile using existing test patches."
 msgstr ""
 "Proszę wskazać, czy ma być profilowana lokalna drukarka, utworzyć łaty "
-"referencyjne czy utworzyć profil używając istniejących łat testujących."
+"referencyjne czy utworzyć profil za pomocą istniejących łat testujących."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1561
@@ -1453,7 +1452,7 @@ msgstr "Nie podłączono kolorymetra."
 
 #: ../src/gcm-picker.c:350
 msgid "The sensor has no native driver."
-msgstr "Czujnik nie posiada natywnego sterownika."
+msgstr "Czujnik nie ma natywnego sterownika."
 
 #. TRANSLATORS: this is displayed the user has not got suitable hardware
 #: ../src/gcm-picker.c:359
