Fix Icon filename in Portuguese translation

--- a/po/pt.po
+++ b/po/pt.po
@@ -64,7 +64,7 @@ msgstr "Calibração de cor"
 #: data/gcm-calibrate.desktop.in:6 data/gcm-picker.desktop.in:6
 #: data/org.gnome.ColorProfileViewer.desktop.in:6
 msgid "gnome-color-manager"
-msgstr "gestor-de-cor-do-gnome"
+msgstr "gnome-color-manager"
 
 #: data/gcm-import.desktop.in:3
 msgid "ICC Profile Installer"
@@ -77,7 +77,7 @@ msgstr "Instalar perfis ICC"
 #. Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 #: data/gcm-import.desktop.in:10
 msgid "application-vnd.iccprofile"
-msgstr "aplicação-vnd.iccprofile"
+msgstr "application-vnd.iccprofile"
 
 #. Window title, where the user can pick spot colors using a measuring device
 #: data/gcm-picker.desktop.in:3 data/gcm-picker.ui:27
